
SET(libfimexf_SOURCES
  fimex.f90
  fimex2d.F90
)

LINK_DIRECTORIES(${PC_LIBRARY_DIRS} ${BOOST_LIBRARY_DIRS})

FIMEX_ADD_LIBRARY(fimexf "${libfimexf_SOURCES}" libfimex "" "")

IF(TARGET libfimexf)
  SET_TARGET_PROPERTIES(libfimexf PROPERTIES Fortran_MODULE_DIRECTORY "mod")
ELSEIF(TARGET libfimexf-static)
  SET_TARGET_PROPERTIES(libfimexf-static PROPERTIES Fortran_MODULE_DIRECTORY "mod")
ENDIF()

INSTALL(DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/mod/" # trailing slash!
  DESTINATION "${FIMEX_INSTALL_INCLUDEDIR}"
)

IF((ENABLE_FELT) AND (ENABLE_NETCDF))
  SET(F90_TESTS testFortran)
ENDIF()

FOREACH(T ${F90_TESTS})
  ADD_EXECUTABLE(${T} "${T}.F90")
  TARGET_LINK_LIBRARIES(${T} libfimexf)
  TARGET_COMPILE_DEFINITIONS(${T} PRIVATE -DTOP_SRCDIR="${CMAKE_SOURCE_DIR}")
  ADD_TEST(NAME ${T} COMMAND ${T})
ENDFOREACH()

