
SET(libfimexf_SOURCES
  fimex.f90
  fimex2d.F90
)

LINK_DIRECTORIES(${PC_LIBRARY_DIRS} ${BOOST_LIBRARY_DIRS})

FIMEX_ADD_LIBRARY(fimexf "${libfimexf_SOURCES}" libfimex "" "")

INSTALL(FILES
  "${CMAKE_CURRENT_BINARY_DIR}/fimex.mod"
  "${CMAKE_CURRENT_BINARY_DIR}/fimex2d.mod"
  DESTINATION "${FIMEX_INSTALL_INCLUDEDIR}"
  )

IF((ENABLE_FELT) AND (ENABLE_NETCDF))
  SET(F90_TESTS testFortran)
ENDIF()

SET (CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -ffree-line-length-none")

FOREACH(T ${F90_TESTS})
  ADD_EXECUTABLE(${T} "${T}.F90")
  TARGET_LINK_LIBRARIES(${T} libfimexf)
  TARGET_COMPILE_DEFINITIONS(${T} PRIVATE -DTOP_SRCDIR="${CMAKE_SOURCE_DIR}" -DTEST_EXTRADATA_DIR="${TEST_EXTRADATA_DIR}")
  ADD_TEST(NAME ${T} COMMAND ${T})
ENDFOREACH()

